--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class="material-style">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Comic Generator</title>
+    <title>Color.lol</title>
     <link rel="stylesheet" href="/styles.css" />
 
     <link rel="icon" type="image/x-icon" href="/images/icons/icon-48x48.png" />
@@ -19,8 +19,8 @@
     <link rel="apple-touch-icon" sizes="512x512" href="/images/icons/icon-512x512.png" />
   </head>
   <body>
-    <noscript>Sorry, you'll need javascript to use the comic generator.</noscript>
-    <div id="hammock-app"></div>
+    <noscript>Sorry, you'll need javascript to use color.lol</noscript>
+    <div id="color-app"></div>
     <script type="text/javascript" src="/bundle.js"></script>
   </body>
 </html>
