--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,13 @@
     <link rel="apple-touch-icon" sizes="256x256" href="/images/icons/icon-256x256.png" />
     <link rel="apple-touch-icon" sizes="384x384" href="/images/icons/icon-384x384.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="/images/icons/icon-512x512.png" />
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138578469-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('config', 'UA-138578469-2');
+    </script>
   </head>
   <body>
     <noscript>Sorry, you'll need javascript to use color.lol</noscript>
@@ -24,3 +31,4 @@
     <script type="text/javascript" src="/bundle.js"></script>
   </body>
 </html>
+
